[package]
name = "actix-mongo-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
actix-rt = "2.7.0"
bson = "2.3.0"
serde = "1.0.10"
env_logger = "0.9"
dotenv = "0.15.0"
actix-cors = "0.6.1"
serde_json = "1.0"

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["sync"] 


